# sqlbucket

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: publish.yml
documentation/: cli.rst  integrity.rst  integrity_macros.rst  usage.rst  variables.rst
sqlbucket/: __init__.py  cli.py  core.py  exceptions.py  integrity.py  project.py  runners.py  utils.py
sqlbucket/macros/: aggregations.jinja2  common.jinja2  macros.j2
sqlbucket/template/: config.yaml
sqlbucket/template/integrity/: integrity_one.sql
sqlbucket/template/queries/: query_one.sql  query_two.sql
sqlflow/: __init__.py  cli.py  core.py  exceptions.py  integrity.py  project.py  runners.py
sqlflow/macros/: macros.j2
sqlflow/template/queries/: query_one.sql
tests/: test_create_project.py  test_integrity.py  test_jinja_functions.py  test_project.py  test_runners.py  test_sqlbucket.py  test_sqlflow.py  test_variables.py
tests/fixtures/: connections.yaml
tests/fixtures/projects/project1/: config.yaml
tests/fixtures/projects/project1/integrity/folder1/: integrity2.sql
tests/fixtures/projects/project1/queries/: query_two.sql
tests/fixtures/projects/project2/: config.yaml
tests/fixtures/projects/project2/queries/: connect_query.sql  query_one.sql
tests/fixtures/projects/project3/: config.yaml
tests/fixtures/projects/project3/queries/: query_one.sql  query_two.sql
