[project]
name = "sqlbucket"
version = "0.4.3"
authors = [
  { name="Philippe Oger", email="phil.oger@gmail.com" },
]
description = "SQLBucket - Write your SQL ETL flow and ETL integrity tool."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.7"
keywords = ['sql', 'etl', 'data-integrity']
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules"
    ]
dependencies = [
    'click>=6.0',
    'jinja2==2.10.1',
    'markupsafe==1.1.1',
    'pyyaml>=5.0',
    'sqlalchemy~=1.3',
    'tabulate>=0.7.5'
]

[project.optional-dependencies]
dev = [
    'pytest>=4',
    'coverage'
]

[project.urls]
"Homepage" = "https://github.com/socialpoint-labs/sqlbucket"


[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"
