[project]
name = "sqlbucket"
version = "0.4.4"
authors = [
  { name="Philippe Oger", email="phil.oger@gmail.com" },
]
description = "SQLBucket - Write your SQL ETL flow and ETL integrity tool."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.10"
keywords = ['sql', 'etl', 'data-integrity']
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules"
    ]
dependencies = [
    'click==8.1.3',
    'Jinja2==3.1.3',
    'MarkupSafe==2.1.1',
    'PyYAML==6.0',
    'SQLAlchemy==1.4.44',
    'tabulate==0.9.0'
]


[project.optional-dependencies]
dev = [
    'pytest>=4',
    'coverage'
]

[project.urls]
"Homepage" = "https://github.com/socialpoint-labs/sqlbucket"


[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"
